# offline-asr-sub-e2e-asr

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  main.cpp  url.txt
chrome-base/: CMakeLists.txt
chrome-base/base/: BUILD  CMakeLists.txt  at_exit_unittest.cc  base.pro  bind_to_current_loop.h  logging.cc  logging.h
chrome-base/base/allocator/: allocator.pro
chrome-base/base/base_static/: base_static.pro
chrome-base/base/debug/: stack_trace_posix.cc
chrome-base/base/i18n/: BUILD  CMakeLists.txt  i18n.pro  icu_util.cc  message_formatter.cc
chrome-base/base/memory/: shared_memory_posix.cc
chrome-base/base/metrics/: persistent_memory_allocator.cc
chrome-base/base/net/: escape.cc  escape.h
chrome-base/base/process/: memory.cc  memory_linux.cc
chrome-base/base/threading/: thread.h  thread_restrictions.cc
chrome-base/base/trace_event/: memory_dump_manager.cc  process_memory_dump.cc  trace_log.cc
chrome-base/url/: BUILD  CMakeLists.txt  url.pro
include/: VadInterface.h  tal_asr_api.h  tal_asr_define.h
lib/: libcudart-3f3c6934.so.11.0  libcudart.so.11.0  libfmt.so.7.0.3  libjsoncpp.so.1.9.2  libsentencepiece.so.0  libtcmalloc_minimal.so.4
res/: bpe.model  cmvn.ark  config.json  md5.txt  readme.txt  vad_cfg.json  words_dict.txt
service-common/: CMakeLists.txt  base-thread-pool.cpp  base-thread-pool.h  custom_thread.h  custom_thread_delegate.h  custom_thread_impl.cpp  custom_thread_impl.h  service-common.cpp  service-common.h
